fix for text overlapping

--- a/css/swp-wdgt.css
+++ b/css/swp-wdgt.css
@@ -388,7 +388,7 @@ button:focus {
   height: 55px;
   line-height: 22px;
 }
-
+.fcw-content-top{}
 .fcw-content1{
   font-size: 14px;
   color:#bc1624;
